<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.cte1.stack_overflow.SubActivity">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never"
        android:icon="@drawable/abc_btn_rating_star_off_mtrl_alpha"/>

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never"
        android:icon="@drawable/abc_ic_clear_mtrl_alpha"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:icon="@drawable/abc_ic_menu_cut_mtrl_alpha"/>

    <item
        android:id="@+id/action_new"
        android:orderInCategory="100"
        android:title="글쓰기"
        app:showAsAction="withText|always"
        android:icon="@drawable/ic_add"/>
</menu>
